# sigenergy-cloud

./: .env.example  .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/sigenergy_cloud/: __init__.py  auth.py  client.py  errors.py  models.py  regions.py  transport.py
tests/: test_client.py  test_models.py  test_transport.py
